syntax = "proto3";

package server.shared;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "v1/shared/Store.proto";

enum CouponType {
  COUPON_STANDARD = 0;
  COUPON_CUSTOM = 1;
  COUPON_BIRTHDAY = 2;
}

message Coupon {
  string ID = 1; 
  string Name = 2;
  CouponType CouponType = 3;
  uint32 DiscountAmount = 4; 
  google.protobuf.Timestamp ExpireAt = 5; // time.Time
  bool IsCombinationable = 6; 
  repeated string Notices = 7;
  repeated shared.Store TargetStore = 8;
}


message UserAttachedCoupon{
  string UserID = 1;
  Coupon Coupon = 2;
  google.protobuf.Timestamp UsedAt = 3; // time.Time
}