syntax = "proto3";

package server.user;

import "google/protobuf/empty.proto";

option go_package = "server/api/v1";

message UserReportRequest {
  string Title = 2;
  string Content = 3;
}

service UserReportController {
  rpc Send(UserReportRequest) returns (google.protobuf.Empty) {}
}